# delphi-lint

./: LICENSE  delphi-lint.cabal  stack.yaml
app/: Main.hs
src/: CheckDfm.hs  Dfm.hs  Lib.hs  ParsecSql.hs  ParsecUtils.hs  SqlSyntax.hs
src/CheckDfm/: NonAsciiInSql.hs
src/Checks/: DfmLocalizationProblemsInSql.hs  DfmNonAsciiInSql.hs
