name:                delphi-lint
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/killmen0w/delphi-lint#readme
license:             BSD3
license-file:        LICENSE
author:              Maksim Golubev
maintainer:          maksim.golubev72@gmail.com
copyright:           2016 Maksim Golubev
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Dfm
                     , Checks.DfmLocalizationProblemsInSql
                     , ParsecUtils
                     , ParsecSql
                     , SqlSyntax
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , transformers >= 0.4.2.0
                     , directory-tree >= 0.12.0
                     , parsec >= 3.1.11
  default-language:    Haskell2010

executable delphi-lint
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:
                       Paths_delphi_lint
  build-depends:       base
                     , filepath
                     , cmdargs >= 0.10.14
                     , regex-tdfa
                     , directory
                     , delphi-lint
  default-language:    Haskell2010

test-suite delphi-lint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , delphi-lint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/killmen0w/delphi-lint
